--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "Apache-2.0",
     "homepage": "http://github.com/paypal/Checkout-PHP-SDK/",
     "require": {
-        "dimitar-kunchev/paypalhttp_php": "1.0.1"
+        "dimitar-kunchev/paypalhttp_php": "*"
     },
     "authors": [
         {
