--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,8 @@
     "license": "Apache-2.0",
     "homepage": "http://github.com/paypal/Checkout-PHP-SDK/",
     "require": {
-        "dimitar-kunchev/paypalhttp_php": "*@dev"
+        "dimitar-kunchev/paypalhttp_php": "dev-master"
     },
-    "minimum-stability": "dev",
     "authors": [
         {
             "name": "PayPal",
